Fixed body margins on small screens

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -270,6 +270,10 @@ body {
 
 
 @media (max-width: 768px) {
+    body {
+        margin: 24px;
+    }
+
     .info {
         margin: 24px;
 
@@ -300,6 +304,10 @@ body {
 
 
 @media (max-width: 375px) {
+    body {
+        margin: 14px 24px;
+    }
+
     .info {
         margin: 24px 24px 18px 24px;
 
